trunk/Archive2/fa/dd1a456bfd5b82/output
+ g++ -v -std=c++1y -O2 -Wall -Wextra -pedantic -pthread main.cpp
Using built-in specs.
COLLECT_GCC=g++
COLLECT_LTO_WRAPPER=/usr/local/libexec/gcc/x86_64-unknown-linux-gnu/4.9.0/lto-wrapper
Target: x86_64-unknown-linux-gnu
Configured with: ./configure --disable-multilib
Thread model: posix
gcc version 4.9.0 (GCC) 
COLLECT_GCC_OPTIONS='-v' '-std=c++1y' '-O2' '-Wall' '-Wextra' '-Wpedantic' '-pthread' '-shared-libgcc' '-mtune=generic' '-march=x86-64'
 /usr/local/libexec/gcc/x86_64-unknown-linux-gnu/4.9.0/cc1plus -quiet -v -imultiarch x86_64-linux-gnu -D_GNU_SOURCE -D_REENTRANT main.cpp -quiet -dumpbase main.cpp -mtune=generic -march=x86-64 -auxbase main -O2 -Wall -Wextra -Wpedantic -std=c++1y -version -o /tmp/cc4tklbB.s
GNU C++ (GCC) version 4.9.0 (x86_64-unknown-linux-gnu)
	compiled by GNU C version 4.9.0, GMP version 5.0.2, MPFR version 3.1.0-p3, MPC version 0.9
GGC heuristics: --param ggc-min-expand=30 --param ggc-min-heapsize=4096
ignoring nonexistent directory "/usr/local/include/x86_64-linux-gnu"
ignoring nonexistent directory "/usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../x86_64-unknown-linux-gnu/include"
#include "..." search starts here:
#include <...> search starts here:
 /usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0
 /usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/x86_64-unknown-linux-gnu
 /usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/backward
 /usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.0/include
 /usr/local/include
 /usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.0/include-fixed
 /usr/include/x86_64-linux-gnu
 /usr/include
End of search list.
GNU C++ (GCC) version 4.9.0 (x86_64-unknown-linux-gnu)
	compiled by GNU C version 4.9.0, GMP version 5.0.2, MPFR version 3.1.0-p3, MPC version 0.9
GGC heuristics: --param ggc-min-expand=30 --param ggc-min-heapsize=4096
Compiler executable checksum: 0c86945b4e500e9e7342b58ba5c0c244
main.cpp: In function 'int main()':
main.cpp:7:17: error: use of deleted function 'A::A()'
  A * aa = new A();
                 ^
main.cpp:1:8: note: 'A::A()' is implicitly deleted because the default definition would be ill-formed:
 struct A {
        ^
main.cpp:1:8: error: uninitialized const member in 'struct A'
main.cpp:2:15: note: 'const int A::j' should be initialized
     const int j;
               ^
main.cpp:7:6: warning: unused variable 'aa' [-Wunused-variable]
  A * aa = new A();
      ^
+ clang++ -stdlib=libc++ -std=c++1y -O2 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp:7:15: error: call to implicitly-deleted default constructor of 'A'
        A * aa = new A();
                     ^
main.cpp:2:15: note: default constructor of 'A' is implicitly deleted because field 'j' of const-qualified type 'const int' would not be initialized
    const int j;
              ^
1 error generated.
